tags/2013-08-29_cppreference/Archive/13d0336fb392e410f51600dad22fc828-779bf1d6e397c7d00db05a27985979a2/output
+ g++-4.8 -std=c++11 -W -Wall -pedantic main.cpp
main.cpp:12:9: error: stray '`' in program
         std::string str( `\`` ) ;
         ^
main.cpp:12:9: error: stray '\' in program
main.cpp:12:9: error: stray '`' in program
main.cpp:12:9: error: stray '`' in program
